fix(story): make sure scroll snap works on iphone

--- a/src/scripts/components/stories/story/blocks/image-gallery/formats/scroll-caption/scroll-caption.module.css
+++ b/src/scripts/components/stories/story/blocks/image-gallery/formats/scroll-caption/scroll-caption.module.css
@@ -3,9 +3,11 @@
   flex-direction: column;
   gap: 40px;
   padding: 1.5rem;
+  scroll-snap-align: none;
 }
 
 .scrollImageContainer {
+  scroll-snap-align: center;
   height: fit-content;
   text-shadow:
     0px 1px 2px rgba(0, 0, 0, 0.3),
